# ChildGL

./: CMakeLists.txt  README.md
PG/: CMakeLists.txt  PGUPV.vcxproj  PGUPV.vcxproj.filters  app.cpp  assimpWrapper.cpp  boundingVolumes.cpp  colorWidget.cpp  commandLineProcessor.cpp  fileLoader.cpp  glMatrices.cpp  image.cpp  interpolators.cpp  ivecInputWidget.cpp  ivecSliderWidget.cpp  lineChartWidget.cpp  media.cpp  mesh.cpp  pgupv.cmake  properties.cpp  scene.cpp  scenegraphEditor.cpp  shader.cpp  stockPrograms.cpp  textOverlay.cpp  textureText.cpp  textureVideo.cpp  uboBones.cpp  vecSliderWidget.cpp  videoDevice.cpp  videoFile.cpp
PG/include/: HW.h  PGUPV.h  assimpWrapper.h  boundingVolumes.h  camerahandler.h  eventProcessor.h  fileLoader.h  lifetimeManager.h  media.h  multiListBoxWidget.h  texture.h  textureVideo.h  videoDevice.h  videoFile.h
p10/: CMakeLists.txt  imgui.ini  log.txt  main.cpp  p10.frag  p10.vcxproj  p10.vert  properties.ini  zbuffershow.frag  zbuffershow.vert
p5-2/: CMakeLists.txt  imgui.ini  log.txt  main.cpp  noise.frag  p5-2.vcxproj  p5-2.vcxproj.filters  pattern.frag  pattern.vert  properties.ini  textureReplace.frag
p6-2/: CMakeLists.txt  ash.frag  ash.vert  cook.frag  cook.vert  ej6-2.vcxproj  gouraud.frag  gouraud.vert  imgui.ini  log.txt  main.cpp  phong.frag  phong.vert  properties.ini  shader)riginal.txt  shaderMy.txt
p7/: CMakeLists.txt  imgui.ini  log.txt  main.cpp  myshader.txt  p7.frag  p7.geom  p7.vcxproj  p7.vert  properties.ini
p8/: CMakeLists.txt  imgui.ini  log.txt  main.cpp  p8.vcxproj  properties.ini  shader.frag  shader.tesc  shader.tese  shader.vert
p9/: CMakeLists.txt  imgui.ini  log.txt  main.cpp  p9.frag  p9.vcxproj  p9.vert  properties.ini
